<resources>
    <string name="app_name">The Movie Database</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_genres">Genres</string>
    <string name="action_highest_rated">Highest Rated</string>
    <string name="action_most_popular">Most Popular</string>
    <string name="action_now_playing">Now Playing</string>
    <string name="action_upcoming">Upcoming</string>

    <string name="view_more">SEE ALL</string>
    <string name="review_more">READ MORE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internet_connection">No internet connection</string>
    <string name="prev_button">Previous</string>
    <string name="next_button">Next</string>

    <string name="hint_search">Search...</string>
    <string name="hint_page">Search page...</string>
</resources>
