<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.izzy.themoviedb_iak.fragments.PageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:orientation="vertical"
        android:background="@color/backgroundColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/genreTitle"
                android:layout_gravity="center"
                android:text="Category Title"
                android:textSize="24sp"
                android:textColor="@color/textColor"
                android:textAlignment="center"

                android:padding="5dp"
                android:layout_weight="1"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prev_button"
                    android:textColor="@color/textColor"
                    android:layout_alignParentLeft="true"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:id="@+id/prev_button"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center">

                    <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="0px"
                    android:layout_height="0px"/>

                    <EditText
                        android:id="@+id/search_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@color/textColor2"
                        android:padding="4dp"
                        android:hint="@string/hint_page"
                        android:focusedByDefault="false">

                    </EditText>


                    <ImageButton
                        android:id="@+id/search_page_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/search_page"
                        android:background="@color/colorAccent"
                        android:textAlignment="textEnd"
                        app:srcCompat="@android:drawable/ic_menu_search" />
                </RelativeLayout>


                <TextView
                    android:id="@+id/next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_button"
                    android:textSize="16sp"
                    android:layout_alignParentRight="true"
                    android:textAllCaps="true"
                    android:textColor="@color/textColor" />

            </RelativeLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/grid_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>



</FrameLayout>
